--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: "gradio-app/github/actions/deploy-space"
+      - uses: "@gradio-app/github/actions/deploy-spac/action.yml"
         with: 
           hf_token: ${secrets.hf_token}
           user_name: 'pngwn'
