--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gradio-app/github/./github/workflows/deploy-space/action.yml
+      - uses: gradio-app/github/./github/workflows/deploy-space@main
         with: 
           hf_token: ${secrets.hf_token}
           user_name: 'pngwn'
