--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: gradio-app/github/actions/deploy-space@main
         with: 
-          hf_token: ${secrets.hf_token}
+          hf_token: ${{ secrets.hf_token }}
           user_name: 'pngwn'
           space_name: 'space-test-one'
           space_type: 'static'
