--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,6 +2,9 @@ name: 'build-test'
 on: # rebuild any PRs and main branch changes
   pull_request:
 
+permissions:
+  pull-requests: write
+
 jobs:
   build: 
     runs-on: ubuntu-latest
